share button minor fix - spacing

--- a/assets/scss/components/_related.scss
+++ b/assets/scss/components/_related.scss
@@ -53,7 +53,7 @@ body {
 		background: none;
 		border: 1px solid $lightest;
 		margin-right: 15px;
-		padding: 5px 20px;
+		padding: 5px 19px;
 		padding-left: 40px;
 		position: relative;
 		border-radius: 0;
